--- a/index.html
+++ b/index.html
@@ -52,15 +52,59 @@
                 <div class="imgs-1">
                     <img src="imgs/Image.png" alt="">
                 </div>
-                </div>
-                <!-- <div class="program">
+    </div>
+    <!-- <div class="program">
                     <i class="fa-brands fa-facebook-f"></i>
                     <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-skype"></i>
                 </div> -->
-            </section>
-        </main>
+    </section>
+    <section class="list-2">
+        <div class="list-text">
+            <div class="title-2">
+                <img src="imgs/img.png" alt="">
+            </div>
+            <div class="title-txt">
+                <a href="About Us">About Us</a>
+                <h4>We Are <span> Making
+                        Ideas Better</span> For Everyone
+                </h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nascetur imperdiet at a augue ullamcorper.
+                    Leo faucibus feugiat rutrum aenean. Nisi, lectus aliquet aliquam consectetur augue praesent. Lorem
+                    vulputate orci eget mi, sed pulvinar.</p>
+                <p>Ornare etiam erat volutpat tempor fringilla mi. Elit a blandit faucibus est, dui interdum ut amet.
+                    Adipiscing feugiat vel at posuere in. Pellentesque volutpat vestibulum.</p>
+                <button>Contact Us</button>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section class="list-3">
+        <div class="cards">
+            <div class="card">
+                <img src="imgs/Icon.png" alt="">
+                <p>World leader in consulting
+                    and finance</p>
+            </div>
+            <div class="card">
+                <img src="imgs/Icon (2).png" alt="">
+                <p>A focused team with a
+                    specialized skill</p>
+            </div>
+            <div class="card">
+                <img src="imgs/Icon (3).png" alt="">
+                <p>Trusted and professional
+                    advisors for you</p>
+            </div>
+            <div class="card">
+                <img src="imgs/Icon (1).png" alt="">
+                <p>Experience to give you a
+                    better results</p>
+            </div>
+        </div>
+    </section>
+    </main>
     </div>
     <script src="script.js"></script>
 </body>
