--- a/index.html
+++ b/index.html
@@ -104,6 +104,35 @@
             </div>
         </div>
     </section>
+    <section class="list-4">
+        <div class="title-4">
+            <h3>We Have Completed <span> 150+
+                Projects </span> Succesfully</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nascetur imperdiet at a augue ullamcorper. Leo faucibus feugiat rutrum aenean. Nisi, lectus aliquet aliquam consectetur augue praesent. Lorem vulputate orci eget mi, sed pulvinar.</p>
+                <p>Ornare etiam erat volutpat tempor fringilla mi. Elit a blandit faucibus est, dui interdum ut amet. Adipiscing feugiat vel at posuere in. Pellentesque volutpat vestibulum.</p>
+                <button>Contact Us</button>
+        </div>
+        <div class="cards-4">
+            <div class="card-4">
+                <h1>250+</h1>
+                <p>Global Customer</p>
+            </div>
+              <div class="card-4">
+                <h1>50+</h1>
+                <p>Team Member</p>
+            </div>
+        </div>
+        <div class="cards-5">
+            <div class="card-4">
+                <h1>156+</h1>
+                <p>Project Completed</p>
+            </div>
+              <div class="card-4">
+                <h1>15+</h1>
+                <p>Our Company</p>
+            </div>
+        </div>
+    </section>
     </main>
     </div>
     <script src="script.js"></script>
