--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -107,17 +109,20 @@
     <section class="list-4">
         <div class="title-4">
             <h3>We Have Completed <span> 150+
-                Projects </span> Succesfully</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nascetur imperdiet at a augue ullamcorper. Leo faucibus feugiat rutrum aenean. Nisi, lectus aliquet aliquam consectetur augue praesent. Lorem vulputate orci eget mi, sed pulvinar.</p>
-                <p>Ornare etiam erat volutpat tempor fringilla mi. Elit a blandit faucibus est, dui interdum ut amet. Adipiscing feugiat vel at posuere in. Pellentesque volutpat vestibulum.</p>
-                <button>Contact Us</button>
+                    Projects </span> Succesfully</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nascetur imperdiet at a augue ullamcorper. Leo
+                faucibus feugiat rutrum aenean. Nisi, lectus aliquet aliquam consectetur augue praesent. Lorem vulputate
+                orci eget mi, sed pulvinar.</p>
+            <p>Ornare etiam erat volutpat tempor fringilla mi. Elit a blandit faucibus est, dui interdum ut amet.
+                Adipiscing feugiat vel at posuere in. Pellentesque volutpat vestibulum.</p>
+            <button>Contact Us</button>
         </div>
         <div class="cards-4">
             <div class="card-4">
                 <h1>250+</h1>
                 <p>Global Customer</p>
             </div>
-              <div class="card-4">
+            <div class="card-4">
                 <h1>50+</h1>
                 <p>Team Member</p>
             </div>
@@ -127,9 +132,38 @@
                 <h1>156+</h1>
                 <p>Project Completed</p>
             </div>
-              <div class="card-4">
+            <div class="card-4">
                 <h1>15+</h1>
                 <p>Our Company</p>
+            </div>
+        </div>
+    </section>
+    <section class="list-5">
+        <div class="title-5">
+            <h4>We Have
+                <span>Some Awesome</span> People
+            </h4>
+        </div>
+        <div class="cards-55">
+            <div class="card-5">
+                <img src="imgs/Image (2).png" alt="">
+                <p>Gustavo Herwitz</p>
+                <span>UI/UX Designer</span>
+            </div>
+            <div class="card-5">
+                <img src="imgs/Image (3).png" alt="">
+                <p>Phillip Curtis</p>
+                <span>Graphic Designer</span>
+            </div>
+            <div class="card-5">
+                <img src="imgs/Image (4).png" alt="">
+                <p>Talan Torff</p>
+                <span>Web Developer</span>
+            </div>
+            <div class="card-5">
+                <img src="imgs/Image (5).png" alt="">
+                <p>Abram Vaccaro</p>
+                <span>App Developer</span>
             </div>
         </div>
     </section>
