--- a/index.html
+++ b/index.html
@@ -167,6 +167,42 @@
             </div>
         </div>
     </section>
+    <section class="list-6">
+        <div class="title-6">
+            <h2>We Have Some
+               <span> Designed & Development</span> Projects</h2>
+        </div>
+        <div class="menu">
+            <ul class="menu-6">
+                <li><a href="index.html">All</a></li>
+                <li><a href="https://newartschool.ru/design?roistat=google37_g_174467787597_731909521199_%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%D0%B5%D1%80%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5&roistat_referrer=&roistat_pos=&utm_source=googleads&utm_medium=cpc&utm_campaign=search_4_graph&utm_content=&utm_term=%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%D0%B5%D1%80%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5&gad_source=1&gad_campaignid=22203196459&gbraid=0AAAAA-IBle9x5iIa0j89YQp8bslkfi-Hy&gclid=CjwKCAjw_pDBBhBMEiwAmY02Nlk8J26Ts0Chu313SHjT-kJjJJWzrF0QQK5pbDyfVGb16kLgEgNbhBoCr_0QAvD_BwE">Graphic Design</a></li>
+                <li><a href="https://yusmpgroup.ru/services/ui-ux-design?utm_medium=cpc&utm_source=google&utm_campaign=1_searchKZ&utm_content=ui%20ux%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD&utm_term=ui%20ux%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD&matchtype=b&utm_source=google&utm_medium=cpc&utm_campaign=Poisk_Kazahstan&gad_source=1&gad_campaignid=22302763375&gbraid=0AAAAAofUPxSuglLMi1brfe4jvbgODcZaS&gclid=CjwKCAjw_pDBBhBMEiwAmY02Nmrs7-RT0URYp8tTqE4lqA4-yPwbTueEf3BDYJKEkkI-2J7Jplm11hoC0vIQAvD_BwE">UI/UX Design</a></li>
+                <li><a href="https://webstart.am/en/website-development/?gad_source=1&gad_campaignid=22386270847&gbraid=0AAAAAoc5vgqaFeLtmz2a9NWe92lblzOZr&gclid=CjwKCAjw_pDBBhBMEiwAmY02NuPkTfcDsNt7SqQ53aD7BMwzHXjLn_aqbGdRSnJ3dJaSppl-e0CwhRoC-1wQAvD_BwE">Web Development</a></li>
+            </ul>
+        </div>
+        <div class="cards-6">
+           <div class="card-6">
+              <img src="imgs/Image (6).png" alt="">
+           </div>
+               <div class="card-6">
+              <img src="imgs/Image (7).png" alt="">
+           </div>
+               <div class="card-6">
+              <img src="imgs/Image (8).png" alt="">
+           </div>
+        </div>
+                <div class="cards-7">
+           <div class="card-6">
+              <img src="imgs/Image (9).png" alt="">
+           </div>
+               <div class="card-6">
+              <img src="imgs/Image (10).png" alt="">
+           </div>
+               <div class="card-6">
+              <img src="imgs/Image (11).png" alt="">
+           </div>
+        </div>
+    </section>
     </main>
     </div>
     <script src="script.js"></script>
