--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="">Contact Us</a></li>
                     <li><button>Let’s Talk</button></li>
                     <div class="arev">
-                        <i class="fa-regular fa-sun"></i>
+                        <i class="fa-regular fa-sun" id="toggleMode"></i>
                     </div>
                 </ul>
 
@@ -170,40 +170,150 @@
     <section class="list-6">
         <div class="title-6">
             <h2>We Have Some
-               <span> Designed & Development</span> Projects</h2>
+                <span> Designed & Development</span> Projects
+            </h2>
         </div>
         <div class="menu">
             <ul class="menu-6">
                 <li><a href="index.html">All</a></li>
-                <li><a href="https://newartschool.ru/design?roistat=google37_g_174467787597_731909521199_%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%D0%B5%D1%80%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5&roistat_referrer=&roistat_pos=&utm_source=googleads&utm_medium=cpc&utm_campaign=search_4_graph&utm_content=&utm_term=%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%D0%B5%D1%80%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5&gad_source=1&gad_campaignid=22203196459&gbraid=0AAAAA-IBle9x5iIa0j89YQp8bslkfi-Hy&gclid=CjwKCAjw_pDBBhBMEiwAmY02Nlk8J26Ts0Chu313SHjT-kJjJJWzrF0QQK5pbDyfVGb16kLgEgNbhBoCr_0QAvD_BwE">Graphic Design</a></li>
-                <li><a href="https://yusmpgroup.ru/services/ui-ux-design?utm_medium=cpc&utm_source=google&utm_campaign=1_searchKZ&utm_content=ui%20ux%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD&utm_term=ui%20ux%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD&matchtype=b&utm_source=google&utm_medium=cpc&utm_campaign=Poisk_Kazahstan&gad_source=1&gad_campaignid=22302763375&gbraid=0AAAAAofUPxSuglLMi1brfe4jvbgODcZaS&gclid=CjwKCAjw_pDBBhBMEiwAmY02Nmrs7-RT0URYp8tTqE4lqA4-yPwbTueEf3BDYJKEkkI-2J7Jplm11hoC0vIQAvD_BwE">UI/UX Design</a></li>
-                <li><a href="https://webstart.am/en/website-development/?gad_source=1&gad_campaignid=22386270847&gbraid=0AAAAAoc5vgqaFeLtmz2a9NWe92lblzOZr&gclid=CjwKCAjw_pDBBhBMEiwAmY02NuPkTfcDsNt7SqQ53aD7BMwzHXjLn_aqbGdRSnJ3dJaSppl-e0CwhRoC-1wQAvD_BwE">Web Development</a></li>
+                <li><a
+                        href="https://newartschool.ru/design?roistat=google37_g_174467787597_731909521199_%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%D0%B5%D1%80%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5&roistat_referrer=&roistat_pos=&utm_source=googleads&utm_medium=cpc&utm_campaign=search_4_graph&utm_content=&utm_term=%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%D0%B5%D1%80%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5&gad_source=1&gad_campaignid=22203196459&gbraid=0AAAAA-IBle9x5iIa0j89YQp8bslkfi-Hy&gclid=CjwKCAjw_pDBBhBMEiwAmY02Nlk8J26Ts0Chu313SHjT-kJjJJWzrF0QQK5pbDyfVGb16kLgEgNbhBoCr_0QAvD_BwE">Graphic
+                        Design</a></li>
+                <li><a
+                        href="https://yusmpgroup.ru/services/ui-ux-design?utm_medium=cpc&utm_source=google&utm_campaign=1_searchKZ&utm_content=ui%20ux%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD&utm_term=ui%20ux%20%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD&matchtype=b&utm_source=google&utm_medium=cpc&utm_campaign=Poisk_Kazahstan&gad_source=1&gad_campaignid=22302763375&gbraid=0AAAAAofUPxSuglLMi1brfe4jvbgODcZaS&gclid=CjwKCAjw_pDBBhBMEiwAmY02Nmrs7-RT0URYp8tTqE4lqA4-yPwbTueEf3BDYJKEkkI-2J7Jplm11hoC0vIQAvD_BwE">UI/UX
+                        Design</a></li>
+                <li><a
+                        href="https://webstart.am/en/website-development/?gad_source=1&gad_campaignid=22386270847&gbraid=0AAAAAoc5vgqaFeLtmz2a9NWe92lblzOZr&gclid=CjwKCAjw_pDBBhBMEiwAmY02NuPkTfcDsNt7SqQ53aD7BMwzHXjLn_aqbGdRSnJ3dJaSppl-e0CwhRoC-1wQAvD_BwE">Web
+                        Development</a></li>
             </ul>
         </div>
         <div class="cards-6">
-           <div class="card-6">
-              <img src="imgs/Image (6).png" alt="">
-           </div>
-               <div class="card-6">
-              <img src="imgs/Image (7).png" alt="">
-           </div>
-               <div class="card-6">
-              <img src="imgs/Image (8).png" alt="">
-           </div>
+            <div class="card-6">
+                <img src="imgs/Image (6).png" alt="">
+            </div>
+            <div class="card-6">
+                <img src="imgs/Image (7).png" alt="">
+            </div>
+            <div class="card-6">
+                <img src="imgs/Image (8).png" alt="">
+            </div>
         </div>
-                <div class="cards-7">
-           <div class="card-6">
-              <img src="imgs/Image (9).png" alt="">
-           </div>
-               <div class="card-6">
-              <img src="imgs/Image (10).png" alt="">
-           </div>
-               <div class="card-6">
-              <img src="imgs/Image (11).png" alt="">
-           </div>
+        <div class="cards-7">
+            <div class="card-6">
+                <img src="imgs/Image (9).png" alt="">
+            </div>
+            <div class="card-6">
+                <img src="imgs/Image (10).png" alt="">
+            </div>
+            <div class="card-6">
+                <img src="imgs/Image (11).png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="list-7">
+        <div class="title-7">
+            <h4>Our Latest <span> Blogs
+                    Will Keep</span> Everyone Updated</h4>
+        </div>
+        <div class="cards-n7">
+            <div class="card-7">
+                <div class="card-txt-7">
+                    <p>35 Stellar Graphic
+                        Design Blogs to Keep You
+                        Educated and Inspired</p>
+                    <img src="imgs/Image (12).png" alt="">
+                </div>
+                <div class="profile-7">
+                    <img src="imgs/Profile.png" alt="">
+                    <p class="profile-txt">Cristofer Westervelt
+                        <span>January 25, 2021</span>
+                    </p>
+                </div>
+            </div>
+            <div class="card-7">
+                <div class="card-txt-7">
+                    <p>Ridiculously powerful
+                        2021 iPad Pro may drop this
+                        month</p>
+                    <img src="imgs/Image (13).png" alt="">
+                </div>
+                <div class="profile-7">
+                    <img src="imgs/Profile (1).png" alt="">
+                    <p class="profile-txt">Haylie Mango
+                        <span>January 25, 2021</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="list-8">
+        <div class="inp-8">
+            <img src="imgs/Image (14).png" alt="">
+            <div class="sms">
+                <h4>Send Your <span>Message To Us</span></h4>
+                <div>
+                    <input type="text" name="" id="" placeholder="name">
+                    <input type="email" name="" id="" placeholder="email">
+                </div>
+                <div>
+                    <input type="number" name="" id="" placeholder="Mobile No">
+                    <input type="Subject" name="" id="" placeholder="Subject">
+                </div>
+                <div>
+                    <textarea name="" id="" placeholder="Send Massage"></textarea>
+                </div>
+                <button>Send Massage</button>
+            </div>
         </div>
     </section>
     </main>
+    <footer>
+        <div class="footer-txt">
+            <div class="footer-title">
+                <div class="footer-name">
+                <h4><span>Digie</span>ncy</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit a laoreet libero dis eget maecenas
+                    bibendum.</p>
+                <div class="icon">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-skype"></i>
+                </div>
+                </div>
+            </div>
+            <div class="footer-title">
+                <div class="footer-menu">
+                <h4>Company</h4>
+                <p>About Us</p>
+                <p>Our Work</p>
+                <p>Client</p>
+                <p>Our Blog</p>
+                <p>Contact US</p>
+                </div>
+            </div>
+            <div class="footer-title">
+                <div class="footer-menu">
+                <h4>Sevices</h4>
+                <p>Graphic Design</p>
+                <p>UI/UX Design</p>
+                <p>Web Development</p>
+                <p>App Development</p>
+                <p>Web Hosting</p>
+                </div>
+            </div>
+            <div class="footer-title">
+                 <div class="footer-name">
+                <h4>Newsletter</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem eget varius viverra in.   </p>
+                 <form>
+                <input type="text" name="" id="" placeholder="info@gmail.com">
+                <button><i class="fa-solid fa-paper-plane"></i></button>
+                </form>
+                 </div>
+            </div>
+        </div>
+    </footer>
     </div>
     <script src="script.js"></script>
 </body>
